fluxengine-local-test/src/test/dsl/junit/InternalTestProjectの移行/error/20190322/rule/AC15ImpChangeRule.dsl
 test 1 s1:
   2018/11/10 00:12:34:
       ImpChangeEvent:
         accountId: 15002            # アカウントID
         campaignId: 15001           # キャンペーンID
         adgroupId: 15000
       inspect:
            holderState.currentState == "over":